fix layout issues in booking form introduced through larger root font size, tweak animations

--- a/_sass/hm-easyumzug/_booking-form.scss
+++ b/_sass/hm-easyumzug/_booking-form.scss
@@ -64,21 +64,21 @@ label {
 /* Booking tool nav pills  */
 
 .nav-pills .nav-link.nav-link-hme {
-  width: 4rem;
-  height: 4rem;
+  width: 64px; /* 4rem */
+  height: 64px;
   border: 1px solid $white;
   padding: 0;
   @media(max-width: 768px) {
-    width: 3rem;
-    height: 3rem;
+    width: 48px; /* 3rem */
+    height: 48px;
   }
 }
 .nav-pills .nav-link.nav-link-hme img {
-  width: 2rem;
-  height: 2rem;
+  width: 32px; /* 2rem */
+  height: 32px;
   @media(max-width: 767.98px) {
-    width: 1.75rem;
-    height: 1.75rem;
+    width: 28px;
+    height: 28px;
   }
 }
 .nav-pills .nav-link.nav-link-hme.active {
@@ -87,7 +87,7 @@ label {
   background-image: url('/assets/icon-bg-hme-blue-grad.svg');
 }
 .nav-separator2 {
-  width: 2.5rem; 
+  width: 40px; /* 2.5rem */ 
   border-top: 1px solid $white;
   margin: 0 1rem;
   @media(max-width: 767.98px) {
@@ -97,23 +97,23 @@ label {
 }
 #bookingForm > ul > li:not(:last-child) {
   position:  relative;
-  width:  calc(64px + 4.5rem);
+  width:  calc(64px + 72px); /* 4.5rem */
   @media(max-width: 767.98px) {
-    width:  calc(48px + 1.25rem);
+    width:  calc(48px + 20px); /* 1.25rem */
   }
 }
 #bookingForm > ul > li:not(:last-child):after {
   content: ''; /*url('/assets/icons/sep-white-32px.svg');*/
   display: block;
-  width: 2.5rem; 
+  width: 40px; /* 2.5rem */
   border-top: 1px solid $white;
-  margin: 0 1rem;
+  margin: 0 16px; /* 1rem */
   position: absolute;
   top: 50%;
   right: 0;
   @media(max-width: 767.98px) {
-    width: 0.75rem;
-    margin: 0 0.25rem;
+    width: 12px; /* 0.75rem */
+    margin: 0 4px; /* 0.25rem */
   }
 }
 
