--- a/_sass/hm-easyumzug/_buttons.scss
+++ b/_sass/hm-easyumzug/_buttons.scss
@@ -55,4 +55,6 @@
   background-color: $white;
 }
 
-
+form .btn {
+  --bs-btn-border-radius: 2rem;
+}
